--- a/src/index.html
+++ b/src/index.html
@@ -132,7 +132,9 @@
 					</div>
 				</section>
 				<section class="about">
-					<div class="backgr backgr_light"></div>
+					<div class="backgr backgr_light">
+						<img src="@img/background/bg-light.png" alt="background">
+					</div>
 					<div class="about__text-backgr text-backgr text-backgr_light">
 						<span data-prlx-cx="300" data-prlx-mouse data-prlx-dxr data-prlx-dxy class="text-backgr__txt">УКР</span>
 						<span data-prlx-cx="300" data-prlx-mouse class="text-backgr__txt">ТРАНС</span>
@@ -435,7 +437,7 @@
 								<div class="spollers__body spollers-project">
 									<div class="spollers-project__wrapper">
 										<div data-da=".spollers-project-03,900,1" class="spollers-project__img-ibg">
-											<img src="@img/home/section-projects/1.jpg" alt="2ТЕ10М - 3589">
+											<img src="@img/home/section-projects/3.jpg" alt="2ТЕ10М - 3589">
 										</div>
 										<div class="spollers-project__info spollers-project-03">
 											<h4 class="spollers-project__title">МАНЕВРОВИЙ ТЕПЛОВОЗ 
@@ -479,7 +481,7 @@
 								<div class="spollers__body spollers-project">
 									<div class="spollers-project__wrapper">
 										<div data-da=".spollers-project-05,900,1" class="spollers-project__img-ibg">
-											<img src="@img/home/section-projects/1.jpg" alt="ДПКР3 - 001">
+											<img src="@img/home/section-projects/5.jpg" alt="ДПКР3 - 001">
 										</div>
 										<div class="spollers-project__info spollers-project-05">
 											<h4 class="spollers-project__title">Регіональний 
