--- a/src/html/_blocks.html
+++ b/src/html/_blocks.html
@@ -12,6 +12,7 @@
 
 <!-- BACKGRAUND LIGHT -->
 <div class="backgr backgr_light">
+  <img src="@img/background/bg-light.png" alt="background">
 </div>
 
 
