--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -1,4 +1,58 @@
 <footer class="footer">
+	<div class="backgr backgr_dark">
+		<img src="@img/background/bg-dark.png" alt="background">
+	</div>
 	<div class="footer__container">
+		<div class="footer__block-logo">
+			<a href="index.html" class="footer__logo">
+				<img class="footer__logo-img-full" src="@img/icons/Logo-full_dark.svg" alt="logo">
+				<img class="footer__logo-img-smal" src="@img/icons/logo.svg" alt="logo">
+			</a>
+		</div>
+		<div class="footer__block-main">
+			<div class="footer__product">
+				<span class="footer-prod__lable">Продукція</span>
+				<nav data-showmore="items" data-showmore-media="700,max" class="footer-prod">
+					<ul data-showmore-content="3" class="footer-prod__list">
+						<li class="footer-prod__item"><a href="#" class="footer-prod__link">БРН - блок регулювання напруги	стартер генератора</a></li>
+						<li class="footer-prod__item"><a href="#" class="footer-prod__link">ПКТБ - пристрій контролю температури букс</a></li>
+						<li class="footer-prod__item"><a href="#" class="footer-prod__link">ТПН 1000В - транспортний перетворювач напруги</a></li>
+						<li class="footer-prod__item"><a href="#" class="footer-prod__link">Прожектор магістральний SLR(S)/36</a></li>
+						<li class="footer-prod__item"><a href="#" class="footer-prod__link">Прожектор маневровий SLS/18</a></li>
+						<li class="footer-prod__item"><a href="#" class="footer-prod__link">Прожектор маневровий SLS/9</a></li>
+						<li class="footer-prod__item"><a href="#" class="footer-prod__link">Ліхтар буферний білий LW-160</a></li>
+						<li class="footer-prod__item"><a href="#" class="footer-prod__link">Ліхтар буферний червоний LR-120</a></li>
+						<li class="footer-prod__item"><a href="#" class="footer-prod__link">Ліхтар буферний подвійний LWR-1</a></li>
+						<li class="footer-prod__item"><a href="#" class="footer-prod__link">Ліхтар буферний двокольоровий LWR-2</a></li>
+					</ul>
+					<button hidden data-showmore-button type="button" class="footer-prod__more"><span>+</span></button>
+				</nav>
+			</div>
+			<ul class="footer__system footer-syst">
+				<span class="footer-syst__lable">Системи</span>
+				<li class="footer-syst__item"><a href="#" class="footer-syst__link">СРВ-1</a></li>
+				<li class="footer-syst__item"><a href="#" class="footer-syst__link">БРУЕП</a></li>
+				<li class="footer-syst__item"><a href="#" class="footer-syst__link">МСУД</a></li>
+				<li class="footer-syst__item"><a href="#" class="footer-syst__link">СЗДК</a></li>
+				<li class="footer-syst__item"><a href="#" class="footer-syst__link">КПА МП</a></li>
+				<li class="footer-syst__item"><a href="#" class="footer-syst__link">СПС-ПГ</a></li>
+			</ul>
+			<div class="footer__other">
+				<div class="footer__about footer-about">
+					<div class="footer-about__lable">Про нас</div>
+					<a href="#" class="footer-about__link">Про підприємство</a>
+					<a href="#" class="footer-about__link">Сертифікати</a>
+				</div>
+				<div class="footer__contact footer-contact">
+					<div class="footer-contact__lable">Контакти</div>
+					<p class="footer-contact__txt">Україна, м. Черкаси,<br> вул. Добровольского, 1</p>
+					<a href="tel:+380506286393" class="footer-contact__tel">+38 (050) 628-63-93</a>
+					<a href="tel:+380508554017" class="footer-contact__tel">+38 (050) 855-40-17</a>
+				</div>
+			</div>
+		</div>
+		<div class="footer__block-other">
+			<div class="footer__copy">© 2023<br>НВП "УКРТРАНСМАШ"</div>
+		</div>
 	</div>
 </footer>
