--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 	"title":"Головна"
 	})
 	<body>
-		<div class="wrapper header-dark">
+		<div class="wrapper page-dark">
 			@@include('html/_header.htm',{})
 			<main class="page">
 				<section class="main">
@@ -373,7 +373,7 @@
 							<span data-prlx-mouse data-prlx-dxr class="text-backgr__txt">40+</span>
 						</div>
 						<div class="projects__head">
-							<div class="projects__label label-txt label-txt_vertical">кейси</div>
+							<div class="projects__label label-txt label-txt_vertical">кейси.</div>
 							<p class="projects__subtitle">Багаторічний досвід<br>
 								— втілюємо в нових<br>
 								проєктах.</p>
@@ -499,11 +499,10 @@
 									</div>
 								</div>
 							</details>
-							
-							
 						</div>
 					</div>
 				</section>
+				@@include('html/_partners.htm',{})
 			</main>
 			@@include('html/_footer.htm',{})
 		</div>
