--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,4 +1,110 @@
-<header class="header">
+<header data-scroll="120" data-scroll-show="1000" class="header">
 	<div class="header__container">
+		<a href="index.html" class="header__logo">
+			<img class="header__logo-dark" src="@img/icons/Logo-full_dark.svg" alt="logo">
+			<img class="header__logo-light" src="@img/icons/Logo-full_light.svg" alt="logo">
+		</a>
+		<div class="header__menu menu">
+			<nav class="menu__body">
+				<ul class="menu__list">
+					<li class="menu__item"><a href="#" class="menu__link">Головна</a></li>
+					<li class="menu__item"><a href="#" class="menu__link">Про нас</a></li>
+					<li class="menu__item">
+						<button type="button" class="menu__link menu__link_btn">Продукція<span></span></button>
+						<ul class="menu__sublist product-submenu">
+							<li class="product-submenu__item">
+								<span class="product-submenu__lable">Прилади</span>
+								<a data-da=".product-tab-01,1100,0" href="https://localworkarea.github.io/t_me_site/index.html" class="product-submenu__link">БРН - блок регулювання напруги стартер генератора</a>
+								<a data-da=".product-tab-01,1100,1" href="#" class="product-submenu__link">ПКТБ - пристрій контролю температури букс</a>
+								<a data-da=".product-tab-01,1100,2" href="#" class="product-submenu__link">ТПН 1000В - транспортний перетворювач напруги</a>
+							</li>
+							<li class="product-submenu__item">
+								<span class="product-submenu__lable">Прожектори</span>
+								<a data-da=".product-tab-02,1100,0" href="#" class="product-submenu__link">Магістральний SLR(S)/36</a>
+								<a data-da=".product-tab-02,1100,1" href="#" class="product-submenu__link">Маневровий SLR/18</a>
+								<a data-da=".product-tab-02,1100,2" href="#" class="product-submenu__link">Маневровий SLS/9</a>
+							</li>
+							<li class="product-submenu__item">
+								<span class="product-submenu__lable">Ліхтарі буферні</span>
+								<a data-da=".product-tab-03,1100,0" href="#" class="product-submenu__link">Білий LW-160</a>
+								<a data-da=".product-tab-03,1100,1" href="#" class="product-submenu__link">Червоний LR-120</a>
+								<a data-da=".product-tab-03,1100,2" href="#" class="product-submenu__link">Подвійний LWR-1</a>
+								<a data-da=".product-tab-03,1100,3" href="#" class="product-submenu__link">Двокольоровий LWR-2</a>
+							</li>
+						</ul>
+						<div data-tabs class="product-tab-submenu">
+							<nav data-tabs-titles class="product-tab-submenu__navigation">
+								<button type="button" class="product-tab-submenu__title _tab-active">Прилади</button>
+								<button type="button" class="product-tab-submenu__title">Прожектори</button>
+								<button type="button" class="product-tab-submenu__title">Ліхтарі буферні</button>
+							</nav>
+							<div data-tabs-body class="product-tab-submenu__content">
+								<div class="product-tab-submenu__body ">
+									<div class="product-tab-submenu__body-wrapper product-tab-01"></div>
+								</div>
+								<div class="product-tab-submenu__body">
+									<div class="product-tab-submenu__body-wrapper product-tab-02"></div>
+								</div>
+								<div class="product-tab-submenu__body">
+									<div class="product-tab-submenu__body-wrapper product-tab-03"></div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li class="menu__item">
+						<button type="button" class="menu__link menu__link_btn">Системи<span></span></button>
+						<ul class="menu__sublist systems-submenu">
+							<li class="systems-submenu__item">
+								<a href="https://localworkarea.github.io/t_me_site/index.html" class="systems-submenu__link">
+									<span class="systems-submenu__lable">СРВ-1</span>
+									<span class="systems-submenu__name">Комплексна система радіозвʼязку та відеоспостереження</span>
+								</a>
+							</li>
+							<li class="systems-submenu__item">
+								<a href="#" class="systems-submenu__link">
+									<span class="systems-submenu__lable">БРУЕП</span>
+									<span class="systems-submenu__name">Блок регулювання	та управління електропередачею</span>
+								</a>
+							</li>
+							<li class="systems-submenu__item">
+								<a href="#" class="systems-submenu__link">
+									<span class="systems-submenu__lable">МСУД</span>
+									<span class="systems-submenu__name">Мікропроцесорна система управління та діагностики</span>
+								</a>
+							</li>
+							<li class="systems-submenu__item">
+								<a href="#" class="systems-submenu__link">
+									<span class="systems-submenu__lable">СЗДК</span>
+									<span class="systems-submenu__name">Система захисту допоміжних трьохфазових кіл</span>
+								</a>
+							</li>
+							<li class="systems-submenu__item">
+								<a href="#" class="systems-submenu__link">
+									<span class="systems-submenu__lable">КПА МП</span>
+									<span class="systems-submenu__name">Комплексний прилад автоматики мікропроцесорний</span>
+								</a>
+							</li>
+							<li class="systems-submenu__item">
+								<a href="#" class="systems-submenu__link">
+									<span class="systems-submenu__lable">СПС-ПГ</span>
+									<span class="systems-submenu__name">Системи пожежної сигналізації та пожежогасіння</span>
+								</a>
+							</li>
+						</ul>
+					</li>
+					<li class="menu__item"><a href="#" class="menu__link">Сертифікати</a></li>
+					<li class="menu__item"><a href="#" class="menu__link">Контакти</a></li>
+				</ul>
+			</nav>
+			<div class="header__other">
+				<a href="tel:+380506286393" class="header__tel">+380506286393</a>
+				<div class="header__lngs">
+					<button type="button" class="header__language">Ukr<span></span></button>
+					<a href="#" class="header__language-link _list">Eng</a>
+				</div>
+			</div>
+			<img class="menu__bg-mob" src="@img/background/menu-mob.png" alt="background">
+		</div>
+		<button type="button" class="menu__icon icon-menu"><span></span></button>
 	</div>
 </header>
