--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -30,12 +30,13 @@
 			</div>
 			<ul class="footer__system footer-syst">
 				<span class="footer-syst__lable">Системи</span>
-				<li class="footer-syst__item"><a href="#" class="footer-syst__link">СРВ-1</a></li>
-				<li class="footer-syst__item"><a href="#" class="footer-syst__link">БРУЕП</a></li>
-				<li class="footer-syst__item"><a href="#" class="footer-syst__link">МСУД</a></li>
-				<li class="footer-syst__item"><a href="#" class="footer-syst__link">СЗДК</a></li>
-				<li class="footer-syst__item"><a href="#" class="footer-syst__link">КПА МП</a></li>
-				<li class="footer-syst__item"><a href="#" class="footer-syst__link">СПС-ПГ</a></li>
+				<li data-da=".footer-syst__mob-wrap,450" class="footer-syst__item"><a href="#" class="footer-syst__link">СРВ-1</a></li>
+				<li data-da=".footer-syst__mob-wrap,450" class="footer-syst__item"><a href="#" class="footer-syst__link">БРУЕП</a></li>
+				<li data-da=".footer-syst__mob-wrap,450" class="footer-syst__item"><a href="#" class="footer-syst__link">МСУД</a></li>
+				<li data-da=".footer-syst__mob-wrap,450" class="footer-syst__item"><a href="#" class="footer-syst__link">СЗДК</a></li>
+				<li data-da=".footer-syst__mob-wrap,450" class="footer-syst__item"><a href="#" class="footer-syst__link">КПА МП</a></li>
+				<li data-da=".footer-syst__mob-wrap,450" class="footer-syst__item"><a href="#" class="footer-syst__link">СПС-ПГ</a></li>
+				<div class="footer-syst__mob-wrap"></div>
 			</ul>
 			<div class="footer__other">
 				<div class="footer__about footer-about">
