--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -7,10 +7,10 @@
 		<div class="header__menu menu">
 			<nav class="menu__body">
 				<ul class="menu__list">
-					<li class="menu__item"><a href="#" class="menu__link">Головна</a></li>
-					<li class="menu__item"><a href="#" class="menu__link">Про нас</a></li>
+					<li class="menu__item"><a href="#" class="menu__link highlight__home">Головна</a></li>
+					<li class="menu__item"><a href="#" class="menu__link highlight__about">Про нас</a></li>
 					<li class="menu__item">
-						<button type="button" class="menu__link menu__link_btn">Продукція<span></span></button>
+						<button type="button" class="menu__link menu__link_btn highlight__prod">Продукція<span></span></button>
 						<ul class="menu__sublist product-submenu">
 							<li class="product-submenu__item">
 								<span class="product-submenu__lable">Прилади</span>
@@ -26,10 +26,10 @@
 							</li>
 							<li class="product-submenu__item">
 								<span class="product-submenu__lable">Ліхтарі буферні</span>
-								<a data-da=".product-tab-03,1100,0" href="#" class="product-submenu__link">Білий LW-160</a>
-								<a data-da=".product-tab-03,1100,1" href="#" class="product-submenu__link">Червоний LR-120</a>
-								<a data-da=".product-tab-03,1100,2" href="#" class="product-submenu__link">Подвійний LWR-1</a>
-								<a data-da=".product-tab-03,1100,3" href="#" class="product-submenu__link">Двокольоровий LWR-2</a>
+								<a data-da=".product-tab-03,1100,0" href="#" class="product-submenu__link">Білий<br> LW-160</a>
+								<a data-da=".product-tab-03,1100,1" href="#" class="product-submenu__link">Червоний<br> LR-120</a>
+								<a data-da=".product-tab-03,1100,2" href="#" class="product-submenu__link">Подвійний<br> LWR-1</a>
+								<a data-da=".product-tab-03,1100,3" href="#" class="product-submenu__link">Двокольоровий<br> LWR-2</a>
 							</li>
 						</ul>
 						<div data-tabs class="product-tab-submenu">
@@ -52,7 +52,7 @@
 						</div>
 					</li>
 					<li class="menu__item">
-						<button type="button" class="menu__link menu__link_btn">Системи<span></span></button>
+						<button type="button" class="menu__link menu__link_btn highlight__syst">Системи<span></span></button>
 						<ul class="menu__sublist systems-submenu">
 							<li class="systems-submenu__item">
 								<a href="https://localworkarea.github.io/t_me_site/index.html" class="systems-submenu__link">
@@ -92,8 +92,8 @@
 							</li>
 						</ul>
 					</li>
-					<li class="menu__item"><a href="#" class="menu__link">Сертифікати</a></li>
-					<li class="menu__item"><a href="#" class="menu__link">Контакти</a></li>
+					<li class="menu__item"><a href="#" class="menu__link highlight__sertif">Сертифікати</a></li>
+					<li class="menu__item"><a href="#" class="menu__link highlight__contact">Контакти</a></li>
 				</ul>
 			</nav>
 			<div class="header__other">
