--- a/src/system-msud.html
+++ b/src/system-msud.html
@@ -101,7 +101,7 @@
                 <div class="descrp-syst__name">
                   <p class="descrp-syst__name-txt">Система<br> забезпечує</p>
                   <div class="descrp-syst__img-ibg">
-                    <img src="@img/page-systems/bryep-2.png" alt="БРУЕП">
+                    <img src="@img/page-systems/bryep-2.png" alt="МСУД">
                   </div>
                 </div>
                 <div class="descrp-syst__about">
@@ -158,7 +158,7 @@
                 <div class="descrp-syst__name">
                   <p class="descrp-syst__name-txt">Склад<br> системи</p>
                   <div data-da=".descrp-syst__about_msud,600,2" class="descrp-syst__img-ibg descrp-syst__img-ibg_msud">
-                    <img src="@img/page-systems/msud.png" alt="БРУЕП">
+                    <img src="@img/page-systems/msud-2.png" alt="МСУД">
                   </div>
                 </div>
 
