--- a/src/system-bruep.html
+++ b/src/system-bruep.html
@@ -85,12 +85,12 @@
                   <p class="descrp-syst__name-txt">Призначення<br> системи</p>
                 </div>
                 <div class="descrp-syst__about">
-                  <p class="descrp-syst__txt text-main_light">Блок регулювання та управління<br> електропередачі БРУЕП</p>
-                  <p class="descrp-syst__txt text-main_dark">Є складовою системи автоматичного регулювання, систем захисту та управління електропередачі тепловозів змінно-постійного струму.
+                  <p class="descrp-syst__txt text-main-light"><span>Блок регулювання та управління<br> електропередачі БРУЕП</span></p>
+                  <p class="descrp-syst__txt text-main-dark">Є складовою системи автоматичного регулювання, систем захисту та управління електропередачі тепловозів змінно-постійного струму.
                   </p>
-                  <p class="descrp-syst__txt text-main_dark text-decor-blue">БРУЕП призначений для <span>формування</span> <span>регулюючого</span> <span>впливу</span> на електропередачу шляхом керування струмом збудження тягового генератора.
+                  <p class="descrp-syst__txt text-main-dark text-decor-blue">БРУЕП призначений для <span>формування</span> <span>регулюючого</span> <span>впливу</span> на електропередачу шляхом керування струмом збудження тягового генератора.
                   </p>
-                  <p class="descrp-syst__txt text-main_dark text-decor-blue">БРУЕП отримує сигнали від датчиків параметрів тягового генератора і тягових електродвигунів і <span>видає сигнали</span> <span>на апаратуру</span> <span>управління</span> схеми електропередачі тепловоза.</p>
+                  <p class="descrp-syst__txt text-main-dark text-decor-blue">БРУЕП отримує сигнали від датчиків параметрів тягового генератора і тягових електродвигунів і <span>видає сигнали</span> <span>на апаратуру</span> <span>управління</span> схеми електропередачі тепловоза.</p>
                  
                 </div>
               </div>
@@ -110,8 +110,8 @@
                     <li class="descrp-syst__item text-main-dark"><span>Модуль електроживлення</span> – блок перетворює напругу бортової мережі тепловоза з номінальною напругою бортової мережі в стабілізовану постійну напругу для живлення всіх модулів БРУЕП.
                       </li>
                   </ol>
-                  <p class="descrp-syst__txt text-main_dark text-decor-blue">БРУЕП <span>має цифровий</span> <span>канал зв'язку</span> <span>CAN v2.0</span>, за допомогою якого підключений до цифрової локальної мережі тепловоза.</p>
-                  <p class="descrp-syst__txt text-main_dark">Ця система у різних модифікаціях була встановлена 
+                  <p class="descrp-syst__txt text-main-dark text-decor-blue">БРУЕП <span>має цифровий</span> <span>канал зв'язку</span> <span>CAN v2.0</span>, за допомогою якого підключений до цифрової локальної мережі тепловоза.</p>
+                  <p class="descrp-syst__txt text-main-dark">Ця система у різних модифікаціях була встановлена 
                     на тепловозах 2ТЕ10, ТЕМ2, ТЕМ7, ТГМ4.
                     </p>
                 </div>
