--- a/src/system-kpa.html
+++ b/src/system-kpa.html
@@ -87,7 +87,7 @@
                 </div>
 
                 <div class="descrp-syst__about">
-                  <p class="descrp-syst__txt text-main_dark text-decor-blue">
+                  <p class="descrp-syst__txt text-main-dark text-decor-blue">
                     КПА МП є системою регулювання, що  призначена для використання в електропередачі змінного струму дизель-поїзда ДЕЛ-02.
                   </p>
                 </div>
@@ -128,7 +128,7 @@
                 </div>
 
                 <div class="descrp-syst__about">
-                  <p class="descrp-syst__txt text-main_light">КПА-МП складається з двох<br> функціональних блоків:</p>
+                  <p class="descrp-syst__txt text-main-light"><span>КПА-МП складається з двох<br> функціональних блоків:</span></p>
                   <ol class="descrp-syst__list">
                     <li class="descrp-syst__item text-main-dark">
                       Блок регулювання (БР) – для керування збудженням
