--- a/src/system-msud.html
+++ b/src/system-msud.html
@@ -87,11 +87,11 @@
                 </div>
 
                 <div class="descrp-syst__about">
-                  <p class="descrp-syst__txt text-main_light">Мікропроцесорна система управління<br> та діагностики МСУД</p>
-                  <p class="descrp-syst__txt text-main_dark text-decor-blue">
+                  <p class="descrp-syst__txt text-main-light"><span>Мікропроцесорна система управління<br> та діагностики МСУД</span></p>
+                  <p class="descrp-syst__txt text-main-dark text-decor-blue">
                     Призначена для <span>автоматичного</span> <span>управління та контролю</span> параметрів та технічного стану систем, вузлів та агрегатів тепловоза.
                   </p>
-                  <p class="descrp-syst__txt text-main_dark text-decor-blue">
+                  <p class="descrp-syst__txt text-main-dark text-decor-blue">
                     Система <span>керує оборотами</span> <span>дизеля, аналізує,</span> <span>реєструє</span> <span>в пам'яті та відображає</span> на екрані бортового комп'ютера інформацію про поточний стан параметрів та виявлені відхилення, а також стежить за режимами роботи двигуна та правильністю виконання апаратами тепловоза алгоритмів складання схеми електропередачі.
                   </p>
                  
@@ -163,7 +163,7 @@
                 </div>
 
                 <div class="descrp-syst__about descrp-syst__about_msud">
-                  <p class="descrp-syst__txt text-main_light">Система складається з:</p>
+                  <p class="descrp-syst__txt text-main-light"><span>Система складається з:</span></p>
                   <ol class="descrp-syst__list">
                     <li class="descrp-syst__item text-main-dark">
                       Блоку управління та збору інформації БУСІ
@@ -175,7 +175,7 @@
                       Датчики
                     </li>
                   </ol>
-                  <p class="descrp-syst__txt text-main_dark">
+                  <p class="descrp-syst__txt text-main-dark">
                     Блок БУСІ встановлюється у високовольтній камері тепловоза, а бортовий комп'ютер встановлюється у кабіні машиніста тепловоза.
                   </p>
                  
