--- a/src/system-sps.html
+++ b/src/system-sps.html
@@ -86,7 +86,7 @@
                   <p class="descrp-syst__name-txt">Призначення<br> системи</p>
                 </div>
                 <div class="descrp-syst__about">
-                  <p class="descrp-syst__txt text-main_dark text-decor-blue">
+                  <p class="descrp-syst__txt text-main-dark text-decor-blue">
                     Система призначена для <span>забезпечення</span> <span>раннього</span> <span>виявлення вогнищ</span> <span>займання</span> на рухомому складі залізничного транспорту, оповіщення локомотивної бригади про місця їх виникнення, відключення обладнання локомотива або МВРС і гасіння пожежі за рахунок випуску вогнегасної речовини в об'єм, що захищається в автоматичному або ручному режимах пуску.
                   </p>
                 </div>
@@ -96,7 +96,7 @@
                   <p class="descrp-syst__name-txt">Будова і робота системи</p>
                 </div>
                 <div class="descrp-syst__about">
-                  <p class="descrp-syst__txt text-main-light">Система УПС-ПГ побудована за модульним принципом із розділеними функціями виявлення вогнищ загоряння та сигналізації про них.</p>
+                  <p class="descrp-syst__txt text-main-light"><span>Система УПС-ПГ побудована за модульним принципом із розділеними функціями виявлення вогнищ загоряння та сигналізації про них.</span></p>
                   <p class="descrp-syst__txt text-main-dark">СПС-ПГ є розподіленою системою спільно діючих приладів: ППКП, БАВ, ДРЖ, сповіщувачі (температурні, димові), вогнегасники.</p>
                  
                 </div>
