--- a/src/system-srv.html
+++ b/src/system-srv.html
@@ -85,7 +85,7 @@
                   <p class="descrp-syst__name-txt">Призначення<br> системи</p>
                 </div>
                 <div class="descrp-syst__about">
-                  <p class="descrp-syst__txt text-main_light">Система призначена<br> для забезпечення:</p>
+                  <p class="descrp-syst__txt text-main-light"><span>Система призначена<br> для забезпечення:</span></p>
                   <ol class="descrp-syst__list">
                     <li class="descrp-syst__item text-main-dark">Cлужбового <span>зв’язку між кабінами</span> управління; </li>
                     <li class="descrp-syst__item text-main-dark"><span>eкстреного зв’язку</span> між пасажиром та машиністом;</li>
@@ -102,7 +102,7 @@
                   <p class="descrp-syst__name-txt">Склад системи</p>
                 </div>
                 <div class="descrp-syst__about">
-                  <p class="descrp-syst__txt text-main-light">Система складається з окремих блоків різного функціонального призначення.</p>
+                  <p class="descrp-syst__txt text-main-light"><span>Система складається з окремих блоків різного функціонального призначення.</span></p>
                   <p class="descrp-syst__txt text-main-dark">Вона комплектується індивідуально для конкретного поїзда у відповідності з вимогами замовника. Максимальна кількість вагоні поїзда – 10.</p>
                   <p class="descrp-syst__txt text-main-dark">Складові частини системи розміщуються в кожному з вагонів поїзда у відповідності з специфікою вагонів різного виду (головний, моторний, причіпний).</p>
                 </div>
@@ -130,7 +130,7 @@
                     </div>
                     <div class="system-spoller__texts">
                       <div class="system-spoller__texts-body">
-                        <p class="system-spoller__txt text-main-light"><span>КБ-2 – є головним блоком, що керує роботою всієї системи СРВ-1.  Виконує наступні функції:</span></p>
+                        <p class="system-spoller__txt text-main-light">КБ-2 – є головним блоком, що керує роботою всієї системи СРВ-1.  Виконує наступні функції:</p>
                         <ol class="system-spoller__list">
                           <li class="system-spoller__list-item text-main-dark">Керування рухом за обраним маршрутом 
                             в автоматичному або ручному режимі</li>
@@ -388,12 +388,12 @@
                     <div class="system-spoller__texts">
                       <div class="system-spoller__texts-body">
                         <p class="system-spoller__txt text-main-dark">Камери відеоспостереження розташовуються в салонах вагонів, кабінах та зовні (огляд заднього виду, огляд залізничної колії, огляд струмоприймачів) згідно з вимогами замовника. Відеоінформація, відзнята кожною камерою, передається на комп’ютер відеоспостереження КБ-3В, розташований в кабіні машиніста. Комп’ютер відеоспостереження має власне програмне забезпечення, яке дозволяє переглядати зображення з камер разом, частково або окремо обраної камери. За вимогами замовника можливе встановлення серверу відеореєстрації.</p>
-                        <p class="system-spoller__txt text-main-dark"><span>«НВП УКРТРАНСМАШ» 
+                        <p class="system-spoller__txt text-main-light"><span>«НВП УКРТРАНСМАШ» 
                           є представником IP-обладнання 
                           торгової марки ZetPro. Компанія-власник 
                           ТМ ZetPro є технологічним партнером світових виробників Dahua та UNV.</span></p>
                         <p class="system-spoller__txt text-main-dark">Лінійка продукції ZetPro охоплює всі сегментипрофесій них пристроїв, кращих в своєму класі, та мають велику перевагу від інших виробників в програмному забезпеченні, а саме: <span>всі системи відеоспостереження ZetPro можуть бути поєднані з програмно-апаратним комплексом CaMap «Безпечне місто».</span></p>
-                        <p class="system-spoller__txt text-main-dark"><span>Програмно-апаратний комплекс 
+                        <p class="system-spoller__txt text-main-light"><span>Програмно-апаратний комплекс 
                           CaMap дає можливість:</span></p>
                           <ol class="system-spoller__list">
                             <li class="system-spoller__list-item text-main-dark"><span>Розпізнавання людей по обличчю.</span> Визначення, статі або емоції. Дає можливість оперативного розшуку зниклих або небезпечних осіб. Повідомлення про агресивні емоції. Швидкий пошук фото в базі даних.</li>
