--- a/src/system-szdk.html
+++ b/src/system-szdk.html
@@ -88,14 +88,14 @@
                   </div>
                 </div>
                 <div class="descrp-syst__about">
-                  <p class="descrp-syst__txt text-main_light">СЗВК призначено для комплексного захисту ланцюгів живлення двигунів потреб тепловоза.</p>
+                  <p class="descrp-syst__txt text-main-light"><span>СЗВК призначено для комплексного захисту ланцюгів живлення двигунів потреб тепловоза.</span></p>
                  
-                  <p class="descrp-syst__txt text-main_dark text-decor-blue">
+                  <p class="descrp-syst__txt text-main-dark text-decor-blue">
                     Для виконання функції захисту від перевантаження струмом <span>пристрій</span> <span>використовує</span> <span>селективний алгоритм</span>, що дозволяє визначати критерії захисту в залежності від напруги і частоти генератора, а також симетричності 
                     і тривалості перевантаження.
                   </p>
 
-                  <p class="descrp-syst__txt text-main_light">Пристрій забезпечує захист від наступних видів несправностей в електричних ланцюгах тепловоза:</p>
+                  <p class="descrp-syst__txt text-main-light"><span>Пристрій забезпечує захист від наступних видів несправностей в електричних ланцюгах тепловоза:</span></p>
 
                   <ol class="descrp-syst__list">
                     <li class="descrp-syst__item text-main-dark">
@@ -111,7 +111,7 @@
                       Навантаження по струму.
                     </li>
                   </ol>
-                  <p class="descrp-syst__txt text-main_dark">
+                  <p class="descrp-syst__txt text-main-dark">
                     Проект реалізовано на тепловозах 2ТЭ116УМ, 2ТЭ116УД, 3ТЭ116УД
                   </p>
                 </div>
