--- a/src/index.html
+++ b/src/index.html
@@ -139,42 +139,11 @@
 						<span data-prlx-cx="300" data-prlx-mouse data-prlx-dxr data-prlx-dxy class="text-backgr__txt">МАШ</span>
 					</div>
 					<div class="about__container">
-						<div class="about__goal goal-about">
-							<div data-da=".goal-about__body-img,650" class="goal-about__label label-txt label-txt_vertical">про нас.</div>
-							<h2 class="goal-about__title title-first-dark">Про<br class="title-first-break"> <span>Науково</span>-Виробниче <span><br>Підприємство</span><br>
-								УКРТРАНСМАШ</h2>
-							<div class="goal-about__body-img">
-								<div class="goal-about__img-ibg">
-									<img src="@img/home/section-about/1.jpg" alt="about">
-								</div>
-							</div>
-							<div class="goal-about__main">
-								<div class="goal-about__body">
-									<p class="goal-about__texts text-main">Наша мета - <span>забезпечити 
-										ефективні рішення для підвищення 
-										надійності та ефективності 
-										електрообладнання залізничного 
-										транспорту</span>, що дозволить зменшити 
-										витрати на його експлуатацію та збільшити 
-										продуктивність. 
-										</p>
-									<p class="goal-about__texts text-main">
-										Ми зосереджені на інноваціях та постійно 
-										працюємо над вдосконаленням технологій 
-										та продуктів для забезпечення найкращої 
-										якості та ефективності
-									</p>
-									<a href="#" class="goal-about__link">
-										<span>Детальніше</span>
-										<img src="@img/icons/arrow-more.svg" alt="img">
-									</a>
-								</div>
-							</div>
-							<div class="goal-about__text-backgr text-backgr text-backgr_light">
-								<span class="text-backgr__txt">УКР</span>
-								<span class="text-backgr__txt">ТРАНС</span>
-								<span class="text-backgr__txt">МАШ</span>
-							</div>
+						@@include('html/_about-block.htm',{})
+						<div class="goal-about__text-backgr text-backgr text-backgr_light">
+							<span class="text-backgr__txt">УКР</span>
+							<span class="text-backgr__txt">ТРАНС</span>
+							<span class="text-backgr__txt">МАШ</span>
 						</div>
 						<div class="about__products products-about">
 							<div class="products-about__label label-txt label-txt_vertical">вироби.</div>
